chore: update settings and prompts log

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
     "cSpell.words": [
-        "ffmq"
+        "bsnes",
+        "Chrono",
+        "CNROM",
+        "EXHIROM",
+        "EXLOROM",
+        "FCEUX",
+        "ffmq",
+        "HIROM",
+        "LOROM",
+        "Mesen",
+        "metatile",
+        "NROM",
+        "rammap",
+        "rommap",
+        "tileset",
+        "UNROM"
     ]
 }
