test: Add more unit tests for Rom, Text, and Core libraries
- Add BankManagerTests for ROM bank management
- Add CompressionDetectorTests for compression detection
- Add StringExtractorTests for text extraction
- Add project references for all library projects
- Total tests now: 72 (all passing)

--- a/src/GameInfoTools.Tests/GameInfoTools.Tests.csproj
+++ b/src/GameInfoTools.Tests/GameInfoTools.Tests.csproj
@@ -22,6 +22,10 @@
     <ProjectReference Include="..\GameInfoTools.Core\GameInfoTools.Core.csproj" />
     <ProjectReference Include="..\GameInfoTools.Analysis\GameInfoTools.Analysis.csproj" />
     <ProjectReference Include="..\GameInfoTools.Text\GameInfoTools.Text.csproj" />
+    <ProjectReference Include="..\GameInfoTools.Rom\GameInfoTools.Rom.csproj" />
+    <ProjectReference Include="..\GameInfoTools.Graphics\GameInfoTools.Graphics.csproj" />
+    <ProjectReference Include="..\GameInfoTools.Data\GameInfoTools.Data.csproj" />
+    <ProjectReference Include="..\GameInfoTools.Disassembly\GameInfoTools.Disassembly.csproj" />
   </ItemGroup>
 
 </Project>
