feat: Add AXAML Views and update to .NET 10
- Update all 8 library projects from .NET 9 to .NET 10 with C# 14
- Remove unnecessary System.Text.Json package from Data project
- Add MirroringMode enum and Mirroring property to RomHeader
- Add mirroring detection in iNES header parsing
- Create 10 AXAML View files with code-behind:
  - WelcomeView, RomInfoView, ChecksumView, TextExtractorView
  - ChrEditorView, DisassemblerView, DataTableView
  - PointerScannerView, HexEditorView, BankViewView
- Update ViewModels with missing properties for View bindings
- Run dotnet format on solution
- All 1009 tests passing

--- a/src/GameInfoTools.Cli/GameInfoTools.Cli.csproj
+++ b/src/GameInfoTools.Cli/GameInfoTools.Cli.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>14</LangVersion>
 		<RootNamespace>GameInfoTools.Cli</RootNamespace>
 		<AssemblyName>git</AssemblyName>
 		<Version>1.0.0</Version>
