--- a/src/GameInfoTools.Data/GameInfoTools.Data.csproj
+++ b/src/GameInfoTools.Data/GameInfoTools.Data.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>14</LangVersion>
 		<RootNamespace>GameInfoTools.Data</RootNamespace>
 		<AssemblyName>GameInfoTools.Data</AssemblyName>
 		<Version>1.0.0</Version>
@@ -14,10 +14,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\GameInfoTools.Core\GameInfoTools.Core.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="System.Text.Json" Version="9.0.0" />
 	</ItemGroup>
 
 </Project>
