--- a/src/GameInfoTools.Rom/GameInfoTools.Rom.csproj
+++ b/src/GameInfoTools.Rom/GameInfoTools.Rom.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>14</LangVersion>
 		<RootNamespace>GameInfoTools.Rom</RootNamespace>
 		<AssemblyName>GameInfoTools.Rom</AssemblyName>
 		<Version>1.0.0</Version>
