feat(UI): Add Map/Script editors, file dialogs, and ViewModel tests
- Add MapEditorViewModel and MapEditorView for game map editing
- Add ScriptEditorViewModel and ScriptEditorView for script disassembly
- Add IFileDialogService for centralized file dialog operations
- Implement file dialogs in TextExtractor, ChrEditor, DataTable views
- Add CommandParameter bindings for window reference in AXAML files
- Update ViewLocator with explicit ViewModel-to-View mapping (AOT)
- Add RomFile.LoadFromBytes() for testing from byte arrays
- Add ViewModelTests.cs with 77 comprehensive ViewModel tests
- Update MainWindowViewModel with 11 tool categories
- Add export functionality for maps, scripts, and data tables

Tests: 1086 passing (15 new ViewModel tests)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "bsnes",
         "Chrono",
         "CNROM",
+        "Consolas",
         "EXHIROM",
         "EXLOROM",
         "FCEUX",
