--- a/src/GameInfoTools.Tests/GameInfoTools.Tests.csproj
+++ b/src/GameInfoTools.Tests/GameInfoTools.Tests.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\GameInfoTools.Graphics\GameInfoTools.Graphics.csproj" />
     <ProjectReference Include="..\GameInfoTools.Data\GameInfoTools.Data.csproj" />
     <ProjectReference Include="..\GameInfoTools.Disassembly\GameInfoTools.Disassembly.csproj" />
+    <ProjectReference Include="..\GameInfoTools.UI\GameInfoTools.UI.csproj" />
   </ItemGroup>
 
 </Project>
