feat: Enhanced editor views with panels and integration tests
XAML View Updates:
- DisassemblerView: Added bookmarks, symbols, basic blocks, and cross-refs panels
- MapEditorView: Added layers panel with add/remove/reorder controls
- ScriptEditorView: Added basic blocks and control flow panels
- Fixed binding name from SymbolsFilter to SymbolFilter

ViewModel Updates:
- DisassemblerViewModel: Added SelectedBookmark, ShowSearchPanel, ToggleSearch
- ScriptEditorViewModel: Added ShowBasicBlocks property

Converters:
- Added MnemonicColorConverter for disassembly syntax highlighting
- Registered converter in App.axaml resources

Integration Tests:
- Added 10 new workflow integration tests
- Tests cover: basic block detection, symbol integration, cross-references
- Map editor load/modify/save and flood fill tests
- CHR editor tile round-trip, multi-select, and flip operations
- Script editor command parsing and control flow detection

Terminal Colors:
- Added VS Code terminal color customizations for better readability
- Set font to Consolas with size 14
- Configured all 16 ANSI colors for dark theme contrast

Tests: 1,315 passing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,29 @@
         "rommap",
         "tileset",
         "UNROM"
-    ]
+    ],
+    "terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
+    "terminal.integrated.fontSize": 14,
+    "workbench.colorCustomizations": {
+        "terminal.foreground": "#E0E0E0",
+        "terminal.background": "#1E1E1E",
+        "terminal.ansiBlack": "#1E1E1E",
+        "terminal.ansiRed": "#F44747",
+        "terminal.ansiGreen": "#6A9955",
+        "terminal.ansiYellow": "#DCDCAA",
+        "terminal.ansiBlue": "#569CD6",
+        "terminal.ansiMagenta": "#C586C0",
+        "terminal.ansiCyan": "#4EC9B0",
+        "terminal.ansiWhite": "#D4D4D4",
+        "terminal.ansiBrightBlack": "#808080",
+        "terminal.ansiBrightRed": "#F14C4C",
+        "terminal.ansiBrightGreen": "#73C991",
+        "terminal.ansiBrightYellow": "#F5F543",
+        "terminal.ansiBrightBlue": "#6796E6",
+        "terminal.ansiBrightMagenta": "#D670D6",
+        "terminal.ansiBrightCyan": "#63D9D9",
+        "terminal.ansiBrightWhite": "#FFFFFF",
+        "terminalCursor.foreground": "#FFFFFF",
+        "terminalCursor.background": "#1E1E1E"
+    }
 }
