style: Fix terminal colors and markdown formatting
- Update .vscode/settings.json with high-contrast VS Code default colors
- Disable GPU acceleration for terminal stability
- Fix MD032 (blank lines around lists) in documentation files
- Fix MD022 (blank lines around headings) in documentation files
- Convert spaces to tabs for indentation
- Add session log for 2025-12-11
- Update prompts log

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,51 +1,52 @@
 {
-    "cSpell.words": [
-        "Avalonia",
-        "axaml",
-        "bsnes",
-        "Chrono",
-        "CNROM",
-        "Consolas",
-        "EXHIROM",
-        "EXLOROM",
-        "FCEUX",
-        "ffmq",
-        "HIROM",
-        "LOROM",
-        "Mesen",
-        "metatile",
-        "NROM",
-        "rammap",
-        "rommap",
-        "tileset",
-        "UNROM"
-    ],
-    "terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
-    "terminal.integrated.fontSize": 15,
-    "terminal.integrated.lineHeight": 1.2,
-    "terminal.integrated.fontWeight": "normal",
-    "terminal.integrated.fontWeightBold": "bold",
-    "terminal.integrated.minimumContrastRatio": 7,
-    "workbench.colorCustomizations": {
-        "terminal.foreground": "#FFFFFF",
-        "terminal.background": "#0C0C0C",
-        "terminal.ansiBlack": "#0C0C0C",
-        "terminal.ansiRed": "#FF6B6B",
-        "terminal.ansiGreen": "#98FB98",
-        "terminal.ansiYellow": "#FFFF00",
-        "terminal.ansiBlue": "#87CEEB",
-        "terminal.ansiMagenta": "#FF69B4",
-        "terminal.ansiCyan": "#00FFFF",
-        "terminal.ansiWhite": "#FFFFFF",
-        "terminal.ansiBrightBlack": "#767676",
-        "terminal.ansiBrightRed": "#FF0000",
-        "terminal.ansiBrightGreen": "#00FF00",
-        "terminal.ansiBrightYellow": "#FFFF00",
-        "terminal.ansiBrightBlue": "#00BFFF",
-        "terminal.ansiBrightMagenta": "#FF00FF",
-        "terminal.ansiBrightCyan": "#00FFFF",
-        "terminal.ansiBrightWhite": "#FFFFFF",
-        "terminalCursor.foreground": "#00FF00",
-        "terminalCursor.background": "#0C0C0C"
-    }
+	"cSpell.words": [
+		"Avalonia",
+		"axaml",
+		"bsnes",
+		"Chrono",
+		"CNROM",
+		"Consolas",
+		"EXHIROM",
+		"EXLOROM",
+		"FCEUX",
+		"ffmq",
+		"HIROM",
+		"LOROM",
+		"Mesen",
+		"metatile",
+		"NROM",
+		"rammap",
+		"rommap",
+		"tileset",
+		"UNROM"
+	],
+	"terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
+	"terminal.integrated.fontSize": 15,
+	"terminal.integrated.lineHeight": 1.2,
+	"terminal.integrated.fontWeight": "normal",
+	"terminal.integrated.fontWeightBold": "bold",
+	"terminal.integrated.minimumContrastRatio": 7,
+	"terminal.integrated.gpuAcceleration": "off",
+	"workbench.colorCustomizations": {
+		"terminal.foreground": "#E0E0E0",
+		"terminal.background": "#1E1E1E",
+		"terminal.ansiBlack": "#1E1E1E",
+		"terminal.ansiRed": "#F44747",
+		"terminal.ansiGreen": "#6A9955",
+		"terminal.ansiYellow": "#DCDCAA",
+		"terminal.ansiBlue": "#569CD6",
+		"terminal.ansiMagenta": "#C586C0",
+		"terminal.ansiCyan": "#4EC9B0",
+		"terminal.ansiWhite": "#D4D4D4",
+		"terminal.ansiBrightBlack": "#808080",
+		"terminal.ansiBrightRed": "#F14C4C",
+		"terminal.ansiBrightGreen": "#89D185",
+		"terminal.ansiBrightYellow": "#F5F543",
+		"terminal.ansiBrightBlue": "#6CB6FF",
+		"terminal.ansiBrightMagenta": "#D670D6",
+		"terminal.ansiBrightCyan": "#89D4CF",
+		"terminal.ansiBrightWhite": "#FFFFFF",
+		"terminalCursor.foreground": "#AEAFAD",
+		"terminalCursor.background": "#1E1E1E"
+	}
 }
