style: Disable MD010 lint rule and convert code blocks to tabs
- Add markdownlint.config to disable MD010/no-hard-tabs rule
- Convert all Python code blocks in docs/formats/*.md to use tabs
- Fix cSpell.words array to use tabs instead of spaces
- Add "unlogged" to spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,12 @@
 		"rammap",
 		"rommap",
 		"tileset",
+		"unlogged",
 		"UNROM"
 	],
+	"markdownlint.config": {
+		"MD010": false
+	},
 	"terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
 	"terminal.integrated.fontSize": 15,
 	"terminal.integrated.lineHeight": 1.2,
