feat(wiki): Add Data Crystal/MediaWiki integration with review workflow
- Add GameInfoTools.Wiki project with MediaWiki API client
- Implement WikiSyncManager for tracking local/remote sync state
- Implement ChangeTracker for embedded wikitext change markers
- Add DataCrystalViewModel with mandatory review workflow
- Add DataCrystalView UI for connection, sync, and review operations
- Add Data Crystal tool to main window tool list
- Add comprehensive documentation with AI content policy warning

IMPORTANT: Data Crystal forbids AI-generated content. All content
must be manually reviewed and edited before upload. The tool enforces
this with a mandatory approval workflow.

--- a/src/GameInfoTools.UI/GameInfoTools.UI.csproj
+++ b/src/GameInfoTools.UI/GameInfoTools.UI.csproj
@@ -37,5 +37,6 @@
 		<ProjectReference Include="..\GameInfoTools.Rom\GameInfoTools.Rom.csproj" />
 		<ProjectReference Include="..\GameInfoTools.Data\GameInfoTools.Data.csproj" />
 		<ProjectReference Include="..\GameInfoTools.Disassembly\GameInfoTools.Disassembly.csproj" />
+		<ProjectReference Include="..\GameInfoTools.Wiki\GameInfoTools.Wiki.csproj" />
 	</ItemGroup>
 </Project>
