test(wiki): Add unit tests for GameInfoTools.Wiki project
- Add ChangeTrackerTests (28 tests) for change marker parsing/creation
- Add MediaWikiTypesTests (21 tests) for API types validation
- Add WikiSyncManagerTests (21 tests) for sync state management
- Fix ChangeTracker regex to handle ISO8601 timestamps with colons
- Fix StripMarkers to use non-greedy matching for HTML comments
- Add Wiki project reference to test project

Total: 77 new tests, all 2697 tests passing

--- a/src/GameInfoTools.Tests/GameInfoTools.Tests.csproj
+++ b/src/GameInfoTools.Tests/GameInfoTools.Tests.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\GameInfoTools.Data\GameInfoTools.Data.csproj" />
     <ProjectReference Include="..\GameInfoTools.Disassembly\GameInfoTools.Disassembly.csproj" />
     <ProjectReference Include="..\GameInfoTools.UI\GameInfoTools.UI.csproj" />
+    <ProjectReference Include="..\GameInfoTools.Wiki\GameInfoTools.Wiki.csproj" />
   </ItemGroup>
 
 </Project>
