docs: Add ROM checksums, referenced files/images docs, reorganize folders
- Add Wiki/~docs/ROM Checksums.md with verified hashes from GoodSNES
- Add Wiki/~docs/Referenced Files.md documenting all Files/ contents
- Add Wiki/~docs/Referenced Images.md documenting all Images/ contents
- Move orphaned Wiki/Files and Wiki/Images to Dragon_Quest_I_II folder
- Update Known Dumps sections with actual ROM checksums for:
  - Chrono Trigger (JP, US)
  - Dragon Quest I & II (JP)
  - Final Fantasy IV (JP V1.0/V1.1, US V1.0/V1.1, Easy Type)
  - Final Fantasy Mystic Quest (all 6 regional versions)
- Update .markdownlint.json to disable MD022, MD031, MD032, MD040

Refs #7

--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,10 @@ env/
 TestResults/
 [Cc]overage/
 *.trx
+
+#######################################
+# ROMs
+#######################################
+~roms/
+
+
