--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/DarkRepos.Web.csproj
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/DarkRepos.Web.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <ProjectReference Include="..\DarkRepos.Web.Client\DarkRepos.Web.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0" />
   </ItemGroup>
