style(darkrepos): Apply code formatting to CSS and Razor files\n\n- Expand CSS utility classes to multi-line format per EditorConfig\n- Normalize newlines at end of files\n- Minor HTML attribute formatting in Razor components

--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/wwwroot/manifest.json
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/wwwroot/manifest.json
@@ -13,5 +13,9 @@
 			"type": "image/png"
 		}
 	],
-	"categories": ["developer tools", "games", "reference"]
+	"categories": [
+		"developer tools",
+		"games",
+		"reference"
+	]
 }
