refactor: Move DarkRepos.Tests from src/ to tests/ folder
- Create dedicated tests/ directory for test projects
- Update solution file reference to new location
- Update project references to use relative paths from new location
- Add CopyButton component tests with complex async JSInterop testing

Improves project structure by separating test code from source code,
following common .NET project organization patterns.

561 tests passing

--- a/DarkRepos/tests/DarkRepos.Tests/DarkRepos.Tests.csproj
+++ b/DarkRepos/tests/DarkRepos.Tests/DarkRepos.Tests.csproj
@@ -27,9 +27,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\DarkRepos.Core\DarkRepos.Core.csproj" />
-		<ProjectReference Include="..\DarkRepos.Web\DarkRepos.Web\DarkRepos.Web.csproj" />
-		<ProjectReference Include="..\DarkRepos.Web\DarkRepos.Web.Client\DarkRepos.Web.Client.csproj" />
+		<ProjectReference Include="..\..\src\DarkRepos.Core\DarkRepos.Core.csproj" />
+		<ProjectReference Include="..\..\src\DarkRepos.Web\DarkRepos.Web\DarkRepos.Web.csproj" />
+		<ProjectReference Include="..\..\src\DarkRepos.Web\DarkRepos.Web.Client\DarkRepos.Web.Client.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
