--- a/.github/workflows/darkrepos.yml
+++ b/.github/workflows/darkrepos.yml
@@ -24,8 +24,8 @@ env:
     DOTNET_CLI_TELEMETRY_OPTOUT: true
 
 jobs:
-    build:
-        name: Build & Test
+    build-web:
+        name: Build & Test Web
         runs-on: ubuntu-latest
 
         steps:
@@ -38,23 +38,23 @@ jobs:
                   dotnet-version: ${{ env.DOTNET_VERSION }}
 
             - name: Restore dependencies
-              run: dotnet restore DarkRepos/DarkRepos.sln
+              run: dotnet restore DarkRepos/Web/DarkRepos.Web.sln
 
             - name: Build solution
-              run: dotnet build DarkRepos/DarkRepos.sln --no-restore --configuration Release
+              run: dotnet build DarkRepos/Web/DarkRepos.Web.sln --no-restore --configuration Release
 
             - name: Run tests
-              run: dotnet test DarkRepos/DarkRepos.sln --no-build --configuration Release --verbosity normal --logger "trx;LogFileName=test-results.trx"
+              run: dotnet test DarkRepos/Web/DarkRepos.Web.sln --no-build --configuration Release --verbosity normal --logger "trx;LogFileName=test-results.trx"
 
             - name: Upload test results
               uses: actions/upload-artifact@v4
               if: always()
               with:
-                  name: test-results
+                  name: web-test-results
                   path: "**/TestResults/*.trx"
 
-    lint:
-        name: Code Quality
+    build-editor:
+        name: Build & Test Editor
         runs-on: ubuntu-latest
 
         steps:
@@ -67,20 +67,73 @@ jobs:
                   dotnet-version: ${{ env.DOTNET_VERSION }}
 
             - name: Restore dependencies
-              run: dotnet restore DarkRepos/DarkRepos.sln
+              run: dotnet restore DarkRepos/Editor/DarkRepos.Editor.sln
+
+            - name: Build solution
+              run: dotnet build DarkRepos/Editor/DarkRepos.Editor.sln --no-restore --configuration Release
+
+            - name: Run tests
+              run: dotnet test DarkRepos/Editor/DarkRepos.Editor.sln --no-build --configuration Release --verbosity normal --logger "trx;LogFileName=test-results.trx"
+
+            - name: Upload test results
+              uses: actions/upload-artifact@v4
+              if: always()
+              with:
+                  name: editor-test-results
+                  path: "**/TestResults/*.trx"
+
+    lint-web:
+        name: Code Quality (Web)
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  dotnet-version: ${{ env.DOTNET_VERSION }}
+
+            - name: Restore dependencies
+              run: dotnet restore DarkRepos/Web/DarkRepos.Web.sln
 
             - name: Check formatting
-              run: dotnet format DarkRepos/DarkRepos.sln --verify-no-changes --verbosity diagnostic
+              run: dotnet format DarkRepos/Web/DarkRepos.Web.sln --verify-no-changes --verbosity diagnostic
               continue-on-error: true
 
             - name: Run analyzers
-              run: dotnet build DarkRepos/DarkRepos.sln --configuration Release /p:TreatWarningsAsErrors=false /p:EnforceCodeStyleInBuild=true
+              run: dotnet build DarkRepos/Web/DarkRepos.Web.sln --configuration Release /p:TreatWarningsAsErrors=false /p:EnforceCodeStyleInBuild=true
+              continue-on-error: true
+
+    lint-editor:
+        name: Code Quality (Editor)
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  dotnet-version: ${{ env.DOTNET_VERSION }}
+
+            - name: Restore dependencies
+              run: dotnet restore DarkRepos/Editor/DarkRepos.Editor.sln
+
+            - name: Check formatting
+              run: dotnet format DarkRepos/Editor/DarkRepos.Editor.sln --verify-no-changes --verbosity diagnostic
+              continue-on-error: true
+
+            - name: Run analyzers
+              run: dotnet build DarkRepos/Editor/DarkRepos.Editor.sln --configuration Release /p:TreatWarningsAsErrors=false /p:EnforceCodeStyleInBuild=true
               continue-on-error: true
 
     publish:
         name: Publish WebAssembly
         runs-on: ubuntu-latest
-        needs: build
+        needs: build-web
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
         steps:
@@ -94,7 +147,7 @@ jobs:
 
             - name: Publish WebAssembly
               run: |
-                  dotnet publish DarkRepos/src/DarkRepos.Web/DarkRepos.Web/DarkRepos.Web.csproj \
+                  dotnet publish DarkRepos/Web/src/DarkRepos.Web.Server/DarkRepos.Web.Server.csproj \
                     --configuration Release \
                     --output ./publish \
                     -p:BlazorEnableCompression=true
@@ -109,7 +162,7 @@ jobs:
     deploy-preview:
         name: Deploy PR Preview
         runs-on: ubuntu-latest
-        needs: build
+        needs: build-web
         if: github.event_name == 'pull_request'
         permissions:
             contents: read
@@ -126,7 +179,7 @@ jobs:
 
             - name: Publish WebAssembly
               run: |
-                  dotnet publish DarkRepos/src/DarkRepos.Web/DarkRepos.Web/DarkRepos.Web.csproj \
+                  dotnet publish DarkRepos/Web/src/DarkRepos.Web.Server/DarkRepos.Web.Server.csproj \
                     --configuration Release \
                     --output ./publish
 
@@ -156,19 +209,29 @@ jobs:
               with:
                   dotnet-version: ${{ env.DOTNET_VERSION }}
 
-            - name: Restore dependencies
-              run: dotnet restore DarkRepos/DarkRepos.sln
+            - name: Restore Web dependencies
+              run: dotnet restore DarkRepos/Web/DarkRepos.Web.sln
 
-            - name: Run security audit
+            - name: Restore Editor dependencies
+              run: dotnet restore DarkRepos/Editor/DarkRepos.Editor.sln
+
+            - name: Run security audit (Web)
               run: |
-                  dotnet list DarkRepos/DarkRepos.sln package --vulnerable --include-transitive 2>&1 | tee security-report.txt
-                  if grep -q "has the following vulnerable packages" security-report.txt; then
-                    echo "::warning::Vulnerable packages detected. See security-report.txt for details."
+                  dotnet list DarkRepos/Web/DarkRepos.Web.sln package --vulnerable --include-transitive 2>&1 | tee security-report-web.txt
+                  if grep -q "has the following vulnerable packages" security-report-web.txt; then
+                    echo "::warning::Vulnerable packages detected in Web. See security-report-web.txt for details."
                   fi
 
-            - name: Upload security report
+            - name: Run security audit (Editor)
+              run: |
+                  dotnet list DarkRepos/Editor/DarkRepos.Editor.sln package --vulnerable --include-transitive 2>&1 | tee security-report-editor.txt
+                  if grep -q "has the following vulnerable packages" security-report-editor.txt; then
+                    echo "::warning::Vulnerable packages detected in Editor. See security-report-editor.txt for details."
+                  fi
+
+            - name: Upload security reports
               uses: actions/upload-artifact@v4
               if: always()
               with:
-                  name: security-report
-                  path: security-report.txt
+                  name: security-reports
+                  path: security-report-*.txt
