feat: Add TAS test files infrastructure (#165)
- Create ~tas-files folder structure for TAS replay files
- Add tas-info.json with metadata for 12 SNES TAS files
- Update .gitignore to exclude compressed/uncompressed folders
- Downloaded files from TASVideos.org (SMV and BK2 formats):
  - Chrono Trigger (BK2, SMV completionist)
  - Donkey Kong Country (BK2 - any%, 101%)
  - Donkey Kong Country 3 (BK2)
  - EarthBound (BK2)
  - Disney's Aladdin (SMV)
  - Goof Troop (SMV)
  - Ardy Lightfoot (SMV)
  - Bubsy (SMV)
  - Secret of Mana (SMV, BK2)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 
 # Project-specific ignores
 ~Fonts/*
+~tas-files/compressed/
+~tas-files/uncompressed/
 
 #######################################
 # User-specific files
