feat(tas): add FM2/VBM integration tests and GUI
- Add 7 FM2 (NES) format integration tests
- Add 7 VBM (Game Boy/GBA) format integration tests
- Add 3 cross-format conversion tests (SMV↔BK2, LSMV→BK2)
- Fix VBM format overflow when savestate offset > controller offset
- Create TasConverterViewModel with full conversion support
- Create TasConverterView with file info, metadata, frame preview
- Add TAS Converter tool to Universal Editor navigation
- Update ViewLocator for TasConverterViewModel mapping

Closes #160 (CLI implementation mostly complete)
Related to #155, #165

--- a/src/GameInfoTools.UI/GameInfoTools.UI.csproj
+++ b/src/GameInfoTools.UI/GameInfoTools.UI.csproj
@@ -38,5 +38,6 @@
 		<ProjectReference Include="..\GameInfoTools.Data\GameInfoTools.Data.csproj" />
 		<ProjectReference Include="..\GameInfoTools.Disassembly\GameInfoTools.Disassembly.csproj" />
 		<ProjectReference Include="..\GameInfoTools.Wiki\GameInfoTools.Wiki.csproj" />
+		<ProjectReference Include="..\GameInfoTools.TasConvert\GameInfoTools.TasConvert.csproj" />
 	</ItemGroup>
 </Project>
