chore: add TAS manifest builder and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 ~Fonts/*
 ~tas-files/compressed/
 ~tas-files/uncompressed/
+~tas-files/mesen-mmo/
 
 #######################################
 # User-specific files
