--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 ~tas-files/compressed/
 ~tas-files/uncompressed/
 ~tas-files/mesen-mmo/
+~reference-files/
 
 #######################################
 # User-specific files
