feat: Add game library references and fix build issues
- Add conditional project references to DW4Lib and FFMQLib from logsmall
- Fix MapEditorViewModel: MapData -> MapDataArray, RenderMap -> UpdateMapDataArray
- Fix MapEditorView.axaml: Use ItemTemplate instead of DisplayMemberBinding for ComboBox

Note: DQ3Lib excluded due to internal dependency issues

Related: #189

--- a/src/GameInfoTools.UI/GameInfoTools.UI.csproj
+++ b/src/GameInfoTools.UI/GameInfoTools.UI.csproj
@@ -40,4 +40,13 @@
 		<ProjectReference Include="..\GameInfoTools.Wiki\GameInfoTools.Wiki.csproj" />
 		<ProjectReference Include="..\GameInfoTools.TasConvert\GameInfoTools.TasConvert.csproj" />
 	</ItemGroup>
+
+	<!-- Game-specific libraries from logsmall workspace -->
+	<!-- Note: Only include libraries that build successfully -->
+	<ItemGroup Condition="Exists('..\..\..\logsmall\DW4Lib\DW4Lib.csproj')">
+		<ProjectReference Include="..\..\..\logsmall\DW4Lib\DW4Lib.csproj" />
+		<!-- DQ3Lib excluded - has internal dependency issues -->
+		<!-- <ProjectReference Include="..\..\..\logsmall\DQ3Lib\DQ3Lib.csproj" /> -->
+		<ProjectReference Include="..\..\..\logsmall\FFMQLib\FFMQLib.csproj" />
+	</ItemGroup>
 </Project>
