--- a/src/GameInfoTools.Core/GameInfoTools.Core.csproj
+++ b/src/GameInfoTools.Core/GameInfoTools.Core.csproj
@@ -12,4 +12,8 @@
 		<Description>Core library for GameInfo ROM hacking tools</Description>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-preview.1.25080.5" />
+	</ItemGroup>
+
 </Project>
