--- a/src/GameInfoTools.UI/GameInfoTools.UI.csproj
+++ b/src/GameInfoTools.UI/GameInfoTools.UI.csproj
@@ -27,6 +27,7 @@
 			<PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
